less/homepage.less
/* ... */
// mind the fonts on non-retina Safari
body.bHome.uaSafari[data-dpr="1"] {
  #contentwrap {
	header {
	  font-weight: 400;
	  -webkit-font-smoothing: antialiased;
	  button, a.btn {
		font-weight: 400;
	  }
	}
	#getstarted #herotext {
	  h1 {
		font-weight: 700;
	  }
	  a {
		font-weight: 600;
	  }
	}
  }
}

body.bHome #contentwrap {
  a.cta:hover, a.cta:active {
	color: inherit;
  }
  footer {
	nav {
	  text-align: center;
	  &.links {
		a {
		  text-decoration: none;
		  text-transform: uppercase;
		  letter-spacing: 2px;
		  font-size: 16px;
		  color: #9e9e9e;
		  &:hover {
			color: #5199d2;
		  }
		  &+a {
			margin-left: 1em;
		  }
		}
	  }
	  a.btn {
		width: 28px;
		padding: 4px;
		&+a.btn {
		  margin-left: 30px;
		}
		background: none;
		border: 0;
		&:hover {
		  border: 0;
		}
		&:active {
		  background: none;
		}
		&.email svg {
		  width: 20px;  height: 13px;
		}
		&.twitter svg {
		  width: 23px;  height: 18px;
		}
		&.facebook svg {
		  width: 13px;  height: 24px;
		}
		&.github svg {
		  width: 23px;  height: 20px;
		}
		&.angellist svg {
		  width: 14px;  height: 20px;
		}
	  }

	}
  }
}



body.bHome.layoutMobile #contentwrap {
  footer {
	nav {
	  &.links {
		a {
		  letter-spacing: 1.75px;
		  font-size: 14px;
		  &+a {
			margin-left: 1rem;
		  }
		}
	  }
	}
  }
}

body.bHome.deviceDesktop.layoutDesktop #contentwrap #getstarted #herotext>div a:hover {
  margin:0 1px;
  border: 3px solid white;
}

body.bHome.layoutTablet[data-dpr="1"] #contentwrap section#getstarted #herotext a.cta {
  font-weight: 600;
}

body.bHome #contentwrap {
  #getstarted {
	height: 678px;


	#herotext {
	  position: absolute;
	  left: 0;
	  right:0;
	  top: 310px;
	  z-index: 10;
	  text-align: center;
	  >div {
		display: -webkit-inline-flex;
		display: inline-flex;
		-webkit-flex-flow: row wrap;
		flex-flow: row wrap;
		-webkit-justify-content: space-between;
		justify-content: space-between;
		max-width: 50.5rem;
		margin: 0 auto;
		h1 {
		  font-size: 50px;
		  font-weight: 600;
		  flex: 0 0 100%;
		  margin: 0 0 25px 0;
		  padding:0;
		  pointer-events: none;
		}
		a {
		  flex: 0 0 45%;
		  border-radius: 45px;
		  background: none;
		  border: 2px solid white;
		  text-transform: uppercase;
		  font-size: 16px;
		  letter-spacing: 2px;
		  padding: 13px 20px;
		  margin: 1px;
		}
	  }
	}
  } // /#getstarted

  #featuredVR {
	background: #171717;
	padding-bottom: 10px;
	border-top: 1px solid #3b3b3b;
	>div {
	  margin: 10px auto;
	  width: 950px;
	}
	div.side-by-side {
	  display: -webkit-flex;
	  display: flex;
	  -webkit-flex-flow: row nowrap;
	  flex-flow: row nowrap;
	  -webkit-justify-content: space-between;
	  justify-content: space-between;
	}
	h2 {
	  font-size: 16px;
	  letter-spacing: 2px;
	  text-transform: uppercase;
	  color: #9e9e9e;
	  text-align: left;
	  flex: 0 0 100%;
	  font-weight: 300;
	  margin: 30px auto;
	  width: 950px;
	}
  }
}

body.bHome.layoutTablet.deviceMobile.landscape #contentwrap {
  section#getstarted {
	height:380px;
	#herotext {
	  top: 37%;
	  >div {
		max-width: 43.5rem;
	  }
	  h1 {
		font-size: 43px;
	  }
	}
  }
}

body.bHome.layoutMobile #contentwrap {
	article.graph.small {
	  	width: 375px;
	  	max-width: 99%;
	  	height: 216px;
		max-height: none;
	}
  #featuredVR {
	>div, h2 {
	  width: 99%;
	}
	h2 {
	  text-align: center;
	}
  }
}

body.bHome.layoutTablet #contentwrap header {
  height: 60px;
  nav {
	padding: 15px 0 5px 0;
	border-bottom: 0;
  }
}

body.bHome.layoutTablet #contentwrap #featuredVR {
  div.side-by-side {
	article.graph.small {
	  width: 229px;
	  height: 107px;
	}
  }
}

/*
body.bHome.layoutTablet #contentwrap #featuredVR {
  >div, h2 {
	width: 99%;
  }
  h2 {
	text-align: center;
  }
  div.side-by-side {
	-webkit-justify-content: space-around;
	justify-content: space-around;
	article.graph.small {
	  	width: 45%;
	  	height: 175px;
		max-height: 216px;
	}
	> article:last-of-type {
	  display: none;
	}
  }
}
/* ... */

